--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -3,8 +3,11 @@
     font-weight: 400;
 }
 
-.heading-4{
-  @extend %heading;
+.heading-1 {
+    @extend %heading;
+    font-size: 4.5rem;
+    color: $color-grey-light-1;
+    line-height: 1;
 }
 
 .heading-2{
